# wda-rs

./: .gitignore  Cargo.toml  config.example.toml  config.toml
src/: main.rs  router.rs  structure.rs
src/db/: mod.rs  pg.rs
src/tests/: common.rs  db_tests.rs  logging_tests.rs  mod.rs  router_tests.rs  structure_tests.rs
src/utils/: config.rs  mod.rs
