[package]
name = "wda_rs"
version = "0.1.0"
edition = "2024"


[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
tokio = { version = "1.50.0", features = ["full"] }
round = "0.1"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "macros",
    "chrono",
] }
once_cell = "1.21.3"
chrono = { version = "0.4.44", features = ["serde"] }
toml = "1.0.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.8", features = ["trace"] }


[profile.release]
opt-level = 'z'
lto = true
strip = true
# panic = "abort"
